--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,15 @@
     <groupId>com.alipay.sofa</groupId>
     <artifactId>sofa-ark-class-isolation</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>springboot-ark-demo</name>
     <description>Demo project for Spring Boot</description>
+    <modules>
+        <module>cabin-test</module>
+        <module>sofa-test</module>
+    </modules>
 
-    <parent>
-        <groupId>com.alipay.sofa</groupId>
-        <artifactId>sofaboot-dependencies</artifactId>
-        <version>3.12.1</version>
-    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,109 +22,6 @@
         <java.version>1.8</java.version>
         <sofa.ark.version>2.2.4-SNAPSHOT</sofa.ark.version>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <!--common, just for compile success-->
-        <dependency>
-            <groupId>com.alipay.sofa</groupId>
-            <artifactId>pojo-ark-plugin</artifactId>
-            <version>1.0.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alipay.sofa</groupId>
-            <artifactId>hessian3-ark-plugin</artifactId>
-            <version>1.0.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alipay.sofa</groupId>
-            <artifactId>hessian4-ark-plugin</artifactId>
-            <version>1.0.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!--ark spring boot starter-->
-        <dependency>
-            <groupId>com.alipay.sofa</groupId>
-            <artifactId>sofa-ark-springboot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alipay.sofa</groupId>
-            <artifactId>sofa-ark-container</artifactId>
-        </dependency>
-
-        <!--ark plugin-->
-        <dependency>
-            <groupId>com.alipay.sofa</groupId>
-            <artifactId>pojo-ark-plugin</artifactId>
-<!--            <classifier>ark-plugin</classifier>-->
-            <version>1.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alipay.sofa</groupId>
-            <artifactId>hessian3-ark-plugin</artifactId>
-<!--            <classifier>ark-plugin</classifier>-->
-            <version>1.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alipay.sofa</groupId>
-            <artifactId>hessian4-ark-plugin</artifactId>
-<!--            <classifier>ark-plugin</classifier>-->
-            <version>1.0.0</version>
-        </dependency>
-
-    </dependencies>
-
-    <profiles>
-        <profile>
-            <id>default</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <repositories>
-                <repository>
-                    <snapshots>
-                        <enabled>true</enabled>
-                    </snapshots>
-                    <id>ark-snapshot</id>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-                </repository>
-            </repositories>
-            <pluginRepositories>
-                <pluginRepository>
-                    <snapshots>
-                        <enabled>true</enabled>
-                    </snapshots>
-                    <id>ark-snapshot</id>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-                </pluginRepository>
-            </pluginRepositories>
-        </profile>
-    </profiles>
 
 <!--    <build>-->
 <!--        <plugins>-->
@@ -146,16 +42,6 @@
 <!--            </plugin>-->
 <!--        </plugins>-->
 <!--    </build>-->
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.6.6</version>
-            </plugin>
-        </plugins>
-    </build>
 
 
 </project>
