--- a/cabin-test/pom.xml
+++ b/cabin-test/pom.xml
@@ -90,15 +90,15 @@
                     <snapshots>
                         <enabled>true</enabled>
                     </snapshots>
-                    <id>cabin-release</id>
-                    <url>https://maven.byted.org/repository/releases</url>
+                    <id>oss</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
                 </repository>
                 <repository>
                     <snapshots>
                         <enabled>true</enabled>
                     </snapshots>
-                    <id>cabin-snapshot</id>
-                    <url>https://maven.byted.org/repository/snapshots</url>
+                    <id>oss</id>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                 </repository>
             </repositories>
             <pluginRepositories>
@@ -106,15 +106,15 @@
                     <snapshots>
                         <enabled>true</enabled>
                     </snapshots>
-                    <id>cabin-snapshot</id>
-                    <url>https://maven.byted.org/repository/snapshots</url>
+                    <id>oss</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
                 </pluginRepository>
                 <pluginRepository>
                     <snapshots>
                         <enabled>true</enabled>
                     </snapshots>
-                    <id>cabin-release</id>
-                    <url>https://maven.byted.org/repository/releases</url>
+                    <id>oss</id>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                 </pluginRepository>
             </pluginRepositories>
         </profile>
